<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1
"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="@string/title_choithu"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />
        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">

        <include layout="@layout/footer"></include>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/title">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <EditText
                android:id="@+id/editText2"
                android:layout_width="57dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/tile_giaidacbiet"
                android:inputType="number|text"
                app:layout_constraintBottom_toTopOf="@+id/editText3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.404" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="53dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="56dp"
                android:ems="10"
                android:hint="@string/tile_loto"
                android:inputType="number"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="231dp"
                android:layout_height="44dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/SoDacBiet"
                android:inputType="number"
                app:layout_constraintEnd_toStartOf="@+id/editText2"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText6"
                android:layout_width="228dp"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/SoLoTo"
                android:inputType="number"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintEnd_toStartOf="@+id/editText3"
                app:layout_constraintHorizontal_bias="0.571"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/editText5"
                app:layout_constraintVertical_bias="0.48" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/hint_giaidacbiet"
                app:layout_constraintBottom_toTopOf="@+id/textView7"
                app:layout_constraintEnd_toStartOf="@+id/editText5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.467" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="63dp"
                android:layout_height="42dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginBottom="64dp"
                android:text="@string/hint_loto"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent" />

            <android.support.constraint.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="top" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="251dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:onClick="xacNhanDuDoan"
                android:text="@string/Confirm"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline"
                app:layout_constraintVertical_bias="0.498"
                tools:text="@string/Confirm" />

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:onClick="xoaDuDoan"
                android:text="@string/Back"
                app:layout_constraintBottom_toTopOf="@+id/barrier"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/guideline"
                app:layout_constraintVertical_bias="0.498"
                tools:text="@string/Back" />
            <TextView
                android:id="@+id/StringDuDoan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:text="@string/ngayDuDoan"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline" />

            <TextView
                android:id="@+id/ngayDuDoan1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:text="@string/chuaDuDoan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/StringDuDoan"
                app:layout_constraintTop_toTopOf="@+id/guideline" />
            <android.support.constraint.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="205dp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/congThucTongTien"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/ngayDuDoan1" />


        </android.support.constraint.ConstraintLayout>
    </RelativeLayout>






</RelativeLayout>