<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/title"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                tools:textColor="@android:color/holo_red_dark" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="right"
                android:text="@string/title_hello"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/title_dangnhap"
                android:textColor="#FFC107" />


        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_above="@+id/footer"
        android:layout_below="@id/title">

        <Button
            android:id="@+id/tk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnXemKetQua"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="332dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:onClick="chuyenSangActionTK"
            android:text="Thống kê 2" />

        <Button
            android:id="@+id/quaysott"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnXemKetQua"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="204dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:onClick="chuyenSangActionTT"
            android:text="Quay số trực tiếp" />

        <Button
            android:id="@+id/btnXemKetQua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnThongKe"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:onClick="chuyenSangActionXemKetQua"
            android:text="@string/ketqua"
            tools:text="@string/ketqua" />

        <Button
            android:id="@+id/btnChoiThu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnXemKetQua"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="67dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:onClick="chuyenSangActionChoiThu"
            android:text="@string/choithu" />

        <Button
            android:id="@+id/btnThongKe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="false"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/thongke" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">

        <include layout="@layout/footer"></include>
    </RelativeLayout>
</RelativeLayout>